# dbt_learn

./: .gitignore  dbt_commands  dbt_project.yml  dbt_summary  pyproject.toml
analyses/: EXPLANATION.md  full_moon_no_sleep.sql
infos/documentations/: EXPLANATION.md
infos/exposures/: EXPLANATION.md
infos/hooks/: EXPLANATION.md
macros/: EXPLANATION.md  logging.sql  no_nulls_in_columns.sql  positive_value.sql  variables.sql
models/: dashboard.yml  docs.md  schema.yml  sources.yml
models/dim/: dim_hosts_cleansed.sql  dim_listings_cleansed.sql  dim_listinings_w_hosts.sql
models/fact/: fact_reviews.sql
models/mart/: mart_fullmoon_reviews.sql
models/src/: src_hosts.sql  src_listings.sql  src_reviews.sql
seeds/: EXPLANATION.md
snapshots/: EXPLANATION.md  scd_raw_listings.sql
tests/: EXPLANATION.md  consistent_created_at.sql  dim_listings_minimum_nights.sql
